create a server to the app

--- a/server/package.json
+++ b/server/package.json
@@ -12,7 +12,7 @@
   "scripts": {
     "watch": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node src/server.js"
+    "start": "node server.js"
   },
   "keywords": [],
   "author": "",
